--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - maildiscovery:/var/lib/postgresql/data
 
   web:
-    build: .
+    build: ./backend
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
@@ -26,15 +26,14 @@ services:
     depends_on:
       - db
   node:
-    image: "node:9"
-    user: "node"
-    working_dir: /home/node/app
-    environment:
-      - NODE_ENV=production
+    build: ./frontend
+    working_dir: /app
     volumes:
-      - ./:/home/node/app
+      - ./frontend:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
+    command: "npm start"
     depends_on:
       - db
 volumes:
