--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-fontawesome": "^1.6.1",
     "react-input-range": "^1.3.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-modal": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
